Fix nasty stretching issue for mobile Safari

--- a/src/common/_typography.scss
+++ b/src/common/_typography.scss
@@ -210,6 +210,7 @@ table.table {
 img {
   max-width: 100%;
   height: auto;
+  align-self: flex-start;
 }
 
 details {
